lab1: prelab: stub out figures for theory problem 2

--- a/lab1/prelab1.tex
+++ b/lab1/prelab1.tex
@@ -44,6 +44,33 @@ here}
 }
 \end{figure}
 
+\begin{figure}[ht] 
+\includegraphics[width=1.0\columnwidth]{prelab1-figure2a}
+\caption{
+\label{fig:hw1-figure2a}
+{\bf Describe  figure 2a...
+here}
+}
+\end{figure}
+
+\begin{figure}[ht] 
+\includegraphics[width=1.0\columnwidth]{prelab1-figure2b}
+\caption{
+\label{fig:hw1-figure2b}
+{\bf Describe  figure 2b...
+here}
+}
+\end{figure}
+
+\begin{figure}[ht] 
+\includegraphics[width=1.0\columnwidth]{prelab1-figure2c}
+\caption{
+\label{fig:hw1-figure2c}
+{\bf Describe  figure 2c...
+here}
+}
+\end{figure}
+
 
 \section{Matlab/Simulink Simulations}
 
