--- a/lab1/prelab1.tex
+++ b/lab1/prelab1.tex
@@ -18,60 +18,80 @@ urlcolor=blue
 \section{Theory Problems}
 
 \subsection{Spectrum of AM modulated signals}
-\begin{figure}[ht] 
-\includegraphics[width=1.0\columnwidth]{prelab1-figure1}
+\begin{figure}[hbtp]
+\includegraphics[width=0.6\columnwidth]{prelab1-figure1}
 \caption{
-\label{fig:hw1-figure1}
-{\bf Describe figure 1...
-here}
+\label{fig:prelab1-figure1}
+{\bf A sketch of the frequency spectrum of the baseband signal $S(f)$.
+}
 }
 \end{figure}
 
-\begin{figure}[ht] 
+\begin{figure}[hbtp]
 \includegraphics[width=1.0\columnwidth]{prelab1-figure1a}
 \caption{
-\label{fig:hw1-figure1a}
-{\bf Describe figure 1a...
-here}
+\label{fig:prelab1-figure1a}
+{\bf A sketch of the frequency spectrum of the amplitude-modulated passband
+signal $\tilde{S}(f)$.
+}
 }
 \end{figure}
 
-\begin{figure}[ht] 
+\begin{figure}[hbtp]
 \includegraphics[width=1.0\columnwidth]{prelab1-figure1b}
 \caption{
-\label{fig:hw1-figure1b}
-{\bf Describe figure 1b...
-here}
+\label{fig:prelab1-figure1b}
+{\bf A sketch of the frequency spectrum of the demodulated signal.
+}
 }
 \end{figure}
 
 \subsection{Frequency demodulation errors}
-\begin{figure}[ht] 
+
+\begin{figure}[h]
 \includegraphics[width=1.0\columnwidth]{prelab1-figure2a}
 \caption{
-\label{fig:hw1-figure2a}
-{\bf Describe  figure 2a...
-here}
+\label{fig:prelab1-figure2a}
+{\bf A sketch of the frequency spectrum of the demodulated signal with
+frequency error $x=0$.
+}
 }
 \end{figure}
 
-\begin{figure}[ht] 
+As frequency error is introduced, the alias baseband copies shift past each
+other.  Because $f_{c}$ dominates $f_{max}$, we assume $f_{c}$ is at least
+several orders of magnitude larger than $f_{max}$.
+
+\begin{figure}[hbtp]
 \includegraphics[width=1.0\columnwidth]{prelab1-figure2b}
 \caption{
-\label{fig:hw1-figure2b}
-{\bf Describe  figure 2b...
-here}
+\label{fig:prelab1-figure2b}
+{\bf A sketch of the frequency spectrum of the demodulated signal with
+frequency error $x=\frac{f_{max}}{10f_{c}}$. Note that spectral copies at
+$\pm2f_{c}$ exist but are not visible in the figure.
+}
 }
 \end{figure}
 
-\begin{figure}[ht] 
+The frequency error is now a magnitude larger than before, but is still
+relatively small because $f_{c}$ is several order of magnitude larger than
+$f_{max}$.
+
+\begin{figure}[hbtp]
 \includegraphics[width=1.0\columnwidth]{prelab1-figure2c}
 \caption{
-\label{fig:hw1-figure2c}
-{\bf Describe  figure 2c...
-here}
+\label{fig:prelab1-figure2c}
+{\bf  A sketch of the frequency spectrum of the demodulated signal with
+frequency error $x=\frac{f_{max}}{f_{c}}$.  Note that spectral copies at
+$\pm2f_{c}$ exist but are not visible in the figure.
+}
 }
 \end{figure}
+
+Even as the aliased copies slide past each other at baseband with the
+introduction of frequency error, the Nyquist rate of the baseband signal is
+unaffected because $f_{max}$ remains unchanged.
+\pagebreak
 
 \subsection{Phase demodulation errors}
 
@@ -117,6 +137,18 @@ error is given by:
 sec(\phi)\leq10 \\
 |\phi|\leq\ sec^{-1}(10) \\
 |\phi|\leq\ 0.4706 \\
+\end{split}
+\end{equation}
+
+\subsection{Agilent tutorial on Spectrum Analyzers}
+
+The resolution bandwidth required to resolve signals separated by 50 kHz that
+differ by 40 dB in power is given by:
+
+\begin{equation}
+\begin{split}
+-40*log_{10}((\frac{50000}{\frac{B}{2\sqrt(2^(1/4)-1)}})^2 - 1) = -40 dB, solve for B \\
+B = 13115 \\
 \end{split}
 \end{equation}
 
