final pre-proof commit

--- a/lab1/prelab1.tex
+++ b/lab1/prelab1.tex
@@ -135,9 +135,20 @@ error is given by:
 \frac{M_{0}}{M_{1}}\leq10 \\
 sec(\phi)\leq10 \\
 |\phi|\leq\ sec^{-1}(10) \\
-|\phi|\leq\ 0.4706 \\
+|\phi|\leq\ 1.4706 \\
 \end{split}
 \end{equation}
+
+\begin{figure}[hbtp]
+\includegraphics[width=0.5\columnwidth]{prelab1-figure3}
+\caption{
+\label{fig:prelab1-figure3}
+{\bf Finding the maximum phase error meeting design specifications.
+}
+}
+\end{figure}
+
+\pagebreak
 
 \subsection{Agilent tutorial on Spectrum Analyzers}
 
@@ -208,7 +219,7 @@ sample rate.
 \includegraphics[width=1.0\columnwidth]{prelab1-filter-input-output}
 \caption{
 \label{fig:prelab1-filter-input-output}
-{\bf The filter input and output for at least 20 symbols of upsampled data.
+{\bf The filter input and output for 20 symbols of upsampled data.
 }
 }
 \end{figure}
@@ -222,7 +233,5 @@ like a windowed function.
 }
 }
 \end{figure}
-
-
 
 \end{document}
