--- a/lab1/prelab1.tex
+++ b/lab1/prelab1.tex
@@ -11,7 +11,7 @@ filecolor=magenta,
 urlcolor=blue         
 }
 \begin{document}
-\title{WES268A Fall 2015 \\ Digital Communications \\ Lab 1: Prelab}
+\title{WES268A Fall 2015 \\ Digital Communications \\ Prelab 1}
 \author{Joshua Emele $<$jemele@acm.org$>$}
 \maketitle
 
