--- a/lab1/prelab1.tex
+++ b/lab1/prelab1.tex
@@ -45,7 +45,9 @@ signal $\tilde{S}(f)$.
 \includegraphics[width=1.0\columnwidth]{prelab1-figure1b}
 \caption{
 \label{fig:prelab1-figure1b}
-{\bf A sketch of the frequency spectrum of the demodulated signal.
+{\bf During demodulation, two $1/4$ magnitude aliased spectral copies are
+placed in the baseband. The ideal low-pass filter with cutoff frequency
+$f_{max}$ eliminates the remaining spectral copies outside the baseband.
 }
 }
 \end{figure}
