--- a/lab1/prelab1.tex
+++ b/lab1/prelab1.tex
@@ -42,7 +42,7 @@ signal $\tilde{S}(f)$.
 \end{figure}
 
 \begin{figure}[hbtp]
-\includegraphics[width=1.0\columnwidth]{prelab1-figure1b}
+\includegraphics[width=8.0\columnwidth]{prelab1-figure1b}
 \caption{
 \label{fig:prelab1-figure1b}
 {\bf During demodulation, two $1/4$ magnitude aliased spectral copies are
@@ -64,7 +64,9 @@ several orders of magnitude larger than $f_{max}$.
 \caption{
 \label{fig:prelab1-figure2a}
 {\bf A sketch of the frequency spectrum of the demodulated signal with
-frequency error $x=0$.
+frequency error $x=0$. Note that unlike figure \ref{fig:prelab1-figure1b} a lowpass
+filter is not used during demodulation leaving spectral copies outside the
+baseband.
 }
 }
 \end{figure}
